FEATURE: Add IDs to html and index button redirect

--- a/source/frontend/chatroom.html
+++ b/source/frontend/chatroom.html
@@ -44,6 +44,8 @@
         </div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/yjc_admin.js"></script>
+    <script src="assets/js/yjc_index.js"></script>
 </body>
 
 </html>
