--- a/source/frontend/adminpanel.html
+++ b/source/frontend/adminpanel.html
@@ -82,6 +82,8 @@
         <div class="btn-group" role="group"><button class="btn btn-primary" type="button" style="background: var(--bs-green);">Save</button><button class="btn btn-primary" type="button" style="background: var(--bs-red);">Back</button></div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/yjc_admin.js"></script>
+    <script src="assets/js/yjc_index.js"></script>
 </body>
 
 </html>
