--- a/source/frontend/index.html
+++ b/source/frontend/index.html
@@ -24,19 +24,21 @@
     <div class="text-center">
         <div class="row" style="margin: 20px;">
             <div class="col">
-                <div class="input-group"><span class="input-group-text">Username</span><input class="form-control" type="text"></div>
+                <div class="input-group"><span class="input-group-text">Username</span><input class="form-control" type="text" id="username"></div>
             </div>
         </div>
         <div class="row" style="margin: 20px;">
             <div class="col">
-                <div class="input-group"><span class="input-group-text">Avatar Image URL</span><input class="form-control" type="url"></div>
+                <div class="input-group"><span class="input-group-text">Avatar Image URL</span><input class="form-control" type="url" id="imageurl"></div>
             </div>
         </div>
         <div class="row">
-            <div class="col"><button class="btn btn-primary" type="button">Chat</button></div>
+            <div class="col"><button class="btn btn-primary" type="button" onclick="chatPress()">Chat</button></div>
         </div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/yjc_admin.js"></script>
+    <script src="assets/js/yjc_index.js"></script>
 </body>
 
 </html>
