--- a/source/frontend/adminpanel.html
+++ b/source/frontend/adminpanel.html
@@ -27,7 +27,7 @@
                         <p>Advanced Artificial Intelligence Tehcnology(TM) (&lt;- not a typo)</p>
                     </div>
                     <div class="col text-center"><label class="switch">
-  <input type="checkbox">
+  <input type="checkbox" id="tog1" value="false">
   <span class="slider round"></span>
 </label></div>
                 </div>
@@ -38,7 +38,7 @@
                         <p>User Edit Privileges</p>
                     </div>
                     <div class="col text-center"><label class="switch">
-  <input type="checkbox">
+  <input type="checkbox" id="tog2" value="false">
   <span class="slider round"></span>
 </label></div>
                 </div>
@@ -49,7 +49,7 @@
                         <p>User Profile Edit Privileges</p>
                     </div>
                     <div class="col text-center"><label class="switch">
-  <input type="checkbox">
+  <input type="checkbox" id="tog3" value="false">
   <span class="slider round"></span>
 </label></div>
                 </div>
@@ -60,7 +60,7 @@
                         <p>Alphabetical Sorting</p>
                     </div>
                     <div class="col text-center"><label class="switch">
-  <input type="checkbox">
+  <input type="checkbox" id="tog4" value="false">
   <span class="slider round"></span>
 </label></div>
                 </div>
@@ -71,7 +71,7 @@
                         <p>Double English</p>
                     </div>
                     <div class="col text-center"><label class="switch">
-  <input type="checkbox">
+  <input type="checkbox" id="tog5" value="false">
   <span class="slider round"></span>
 </label></div>
                 </div>
@@ -79,10 +79,11 @@
         </ul>
     </div>
     <div class="text-center">
-        <div class="btn-group" role="group"><button class="btn btn-primary" type="button" style="background: var(--bs-green);">Save</button><button class="btn btn-primary" type="button" style="background: var(--bs-red);">Back</button></div>
+        <div class="btn-group" role="group"><button class="btn btn-primary" id="savebutton" type="button" style="background: var(--bs-green);" onclick="sendSettings(event)">Save</button><button class="btn btn-primary" type="button" style="background: var(--bs-red);" onclick="">Back</button></div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/yjc_admin.js"></script>
+    <script src="assets/js/yjc_chat.js"></script>
     <script src="assets/js/yjc_index.js"></script>
 </body>
 
