--- a/source/frontend/chatroom.html
+++ b/source/frontend/chatroom.html
@@ -45,6 +45,7 @@
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/yjc_admin.js"></script>
+    <script src="assets/js/yjc_chat.js"></script>
     <script src="assets/js/yjc_index.js"></script>
 </body>
 
