--- a/source/frontend/index.html
+++ b/source/frontend/index.html
@@ -38,6 +38,7 @@
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/yjc_admin.js"></script>
+    <script src="assets/js/yjc_chat.js"></script>
     <script src="assets/js/yjc_index.js"></script>
 </body>
 
