--- a/source/frontend/adminpanel.html
+++ b/source/frontend/adminpanel.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Codejam2022</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Icon-Button.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/Toggle-Switch-toggle-switch.css">
     <link rel="stylesheet" href="assets/css/Toggle-Switch.css">
@@ -79,7 +80,7 @@
         </ul>
     </div>
     <div class="text-center">
-        <div class="btn-group" role="group"><button class="btn btn-primary" id="savebutton" type="button" style="background: var(--bs-green);" onclick="sendSettings(event)">Save</button><button class="btn btn-primary" type="button" style="background: var(--bs-red);" onclick="">Back</button></div>
+        <div class="btn-group" role="group"><button class="btn btn-primary" id="savebutton" type="button" style="background: var(--bs-green);" onclick="sendSettings(event)">Save</button><button class="btn btn-primary" type="button" style="background: var(--bs-red);" onclick="backOut(event);">Back</button></div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/yjc_admin.js"></script>
