--- a/source/frontend/adminpanel.html
+++ b/source/frontend/adminpanel.html
@@ -28,9 +28,9 @@
                         <p>Advanced Artificial Intelligence Tehcnology(TM) (&lt;- not a typo)</p>
                     </div>
                     <div class="col text-center"><label class="switch">
-  <input type="checkbox" id="tog1" value="false">
-  <span class="slider round"></span>
-</label></div>
+                            <input type="checkbox" id="tog1" value="false">
+                            <span class="slider round"></span>
+                        </label></div>
                 </div>
             </li>
             <li class="list-group-item">
@@ -39,9 +39,9 @@
                         <p>User Edit Privileges</p>
                     </div>
                     <div class="col text-center"><label class="switch">
-  <input type="checkbox" id="tog2" value="false">
-  <span class="slider round"></span>
-</label></div>
+                            <input type="checkbox" id="tog2" value="false">
+                            <span class="slider round"></span>
+                        </label></div>
                 </div>
             </li>
             <li class="list-group-item">
@@ -50,9 +50,9 @@
                         <p>User Profile Edit Privileges</p>
                     </div>
                     <div class="col text-center"><label class="switch">
-  <input type="checkbox" id="tog3" value="false">
-  <span class="slider round"></span>
-</label></div>
+                            <input type="checkbox" id="tog3" value="false">
+                            <span class="slider round"></span>
+                        </label></div>
                 </div>
             </li>
             <li class="list-group-item">
@@ -61,9 +61,9 @@
                         <p>Alphabetical Sorting</p>
                     </div>
                     <div class="col text-center"><label class="switch">
-  <input type="checkbox" id="tog4" value="false">
-  <span class="slider round"></span>
-</label></div>
+                            <input type="checkbox" id="tog4" value="false">
+                            <span class="slider round"></span>
+                        </label></div>
                 </div>
             </li>
             <li class="list-group-item">
@@ -72,15 +72,18 @@
                         <p>Double English</p>
                     </div>
                     <div class="col text-center"><label class="switch">
-  <input type="checkbox" id="tog5" value="false">
-  <span class="slider round"></span>
-</label></div>
+                            <input type="checkbox" id="tog5" value="false">
+                            <span class="slider round"></span>
+                        </label></div>
                 </div>
             </li>
         </ul>
     </div>
     <div class="text-center">
-        <div class="btn-group" role="group"><button class="btn btn-primary" id="savebutton" type="button" style="background: var(--bs-green);" onclick="sendSettings(event)">Save</button><button class="btn btn-primary" type="button" style="background: var(--bs-red);" onclick="backOut(event);">Back</button></div>
+        <div class="btn-group" role="group"><button class="btn btn-primary" id="savebutton" type="button"
+                style="background: var(--bs-green);" onclick="sendSettings(event)">Save</button><button
+                class="btn btn-primary" type="button" style="background: var(--bs-red);"
+                onclick="backOut(event);">Back</button></div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/yjc_admin.js"></script>
