--- a/source/frontend/chatroom.html
+++ b/source/frontend/chatroom.html
@@ -23,7 +23,7 @@
     <div class="text-center" id="popupform" style="display: none;">
         <form>
             <h1>Edit</h1>
-            <hr><input class="form-control" type="text" id="editUser" name="username"><input class="form-control" type="text" id="editMessage" name="message"><input class="form-control" type="url" id="editImage" name="imageURL">
+            <hr><input class="form-control" type="text" id="editUser"><input class="form-control" type="text" id="editMessage"><input class="form-control" type="url" id="editImage">
             <div class="btn-group" role="group"><button class="btn btn-primary" id="editSave" type="button" style="background: var(--bs-green);" onclick="editSendButton(event)">Save</button><button class="btn btn-primary" id="editCancel" type="button" style="background: var(--bs-red);" onclick="editCancelButton()">Cancel</button></div>
         </form>
     </div>
